--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
- <!DOCTYPE html>
- <html>
- <head>
-   <title>DevOps Lab</title>
- </head>
- <body>
-   <h1>Hello DevOps 🚀</h1>
- </body>
- </html>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>DevOps Lab</title>
+</head>
+<body>
+  <h1>Hello DevOps 🚀</h1>
+  <h1>Phase 6 Test</h1>
+
+</body>
+</html>
+
